--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-AIRTABLE_APIKEY=''
-AIRTABLE_TABLE_ID=''
-AIRTABLE_DOC_ID=''
-TELEGRAM_BOT_TOKEN=''
+AIRTABLE_APIKEY='keyxxx'
+AIRTABLE_TABLE_ID='appxxx'
+AIRTABLE_DOC_ID='xxx'
+TELEGRAM_CHAT_ID='-xxx'
+TELEGRAM_BOT_TOKEN='xxx:xxxx'
