Añadido script para notificar de directos. Añadida comprobación para categorías vacías.

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 AIRTABLE_APIKEY='keyxxx'
-AIRTABLE_TABLE_ID='appxxx'
-AIRTABLE_DOC_ID='xxx'
+AIRTABLE_TABLE_ID='tblxxxxx'
+AIRTABLE_DIRECTOS_TABLE_ID='tblxxxxxx'
+AIRTABLE_DOC_ID='appxxx'
 TELEGRAM_CHAT_ID='-xxx'
 TELEGRAM_BOT_TOKEN='xxx:xxxx'
